--- a/supported/opensciencegrid/osdf-origin/values.yaml
+++ b/supported/opensciencegrid/osdf-origin/values.yaml
@@ -77,6 +77,14 @@ image:
   tag: 3.6-release
   pullPolicy: Always
 
+
+nodeSelector: {}
+
+tolerations: []
+
+affinity: {}
+
+
 ### SLATE-START ###
 SLATE:
   Instance:
