Add serviceAnnotations for arbitrary annotations to the service

--- a/supported/opensciencegrid/osdf-origin/templates/service.yaml
+++ b/supported/opensciencegrid/osdf-origin/templates/service.yaml
@@ -8,6 +8,9 @@ metadata:
     instance: {{ .Values.Instance | quote }}
   annotations:
     external-dns.alpha.kubernetes.io/hostname: {{ .Values.topologyFQDN | quote }}
+    {{- with .Values.serviceAnnotations }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   type: LoadBalancer
   externalTrafficPolicy: Local
