Use Helm trick to avoid having to specify .Values.resources twice
(the "with" statement omits the block if the variable is empty)

--- a/supported/opensciencegrid/osdf-origin/templates/deployment.yaml
+++ b/supported/opensciencegrid/osdf-origin/templates/deployment.yaml
@@ -98,9 +98,9 @@ spec:
               value: "{{ first .Values.authOrigin.exports }}"
             {{- end }}
 
-          {{- if .Values.resources }}
+          {{- with .Values.resources }}
           resources:
-            {{- toYaml .Values.resources | nindent 12 }}
+            {{- toYaml . | nindent 12 }}
           {{- end }}
           {{- if .Values.livenessProbeEnabled }}
           livenessProbe:
