Only populate volumes if the user specifies them

--- a/supported/opensciencegrid/osdf-origin/templates/deployment.yaml
+++ b/supported/opensciencegrid/osdf-origin/templates/deployment.yaml
@@ -39,19 +39,21 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       volumes:
-        {{- range .Values.dataVolumes }}
-        - name: {{ .name }}
-          {{- if and (not (empty .claimName)) (not (empty .hostPath)) }}
-            {{- fail "Specify claimName or hostPath, not both" -}}
-          {{- else if .claimName }}
-          persistentVolumeClaim:
-            claimName: {{ .claimName }}
-          {{- else if .hostPath }}
-          hostPath:
-            path: {{ .hostPath }}
-            type: Directory
-          {{- else }}
-            {{- fail "Specify either claimName or hostPath" -}}
+        {{- if .Values.dataVolumes }}
+          {{- range .Values.dataVolumes }}
+          - name: {{ .name }}
+            {{- if and (not (empty .claimName)) (not (empty .hostPath)) }}
+              {{- fail "Specify claimName or hostPath, not both" -}}
+            {{- else if .claimName }}
+            persistentVolumeClaim:
+              claimName: {{ .claimName }}
+            {{- else if .hostPath }}
+            hostPath:
+              path: {{ .hostPath }}
+              type: Directory
+            {{- else }}
+              {{- fail "Specify either claimName or hostPath" -}}
+            {{- end }}
           {{- end }}
         {{- end }}
 
