--- a/supported/opensciencegrid/osdf-origin/templates/deployment.yaml
+++ b/supported/opensciencegrid/osdf-origin/templates/deployment.yaml
@@ -157,6 +157,16 @@ spec:
               name: config
               subPath: stash-origin-auth-scitokens.conf.local
             {{ end }}
+            {{- if .Values.extraConfigBefore }}
+            - mountPath: /etc/xrootd/config.d/00-extra-before.cfg
+              name: config
+              subPath: 00-extra-before.cfg
+            {{ end }}
+            {{- if .Values.extraConfigAfter }}
+            - mountPath: /etc/xrootd/config.d/00-extra-after.cfg
+              name: config
+              subPath: 99-extra-after.cfg
+            {{ end }}
             {{- if .Values.xrootdLogVolumeClaimName }}
             - mountPath: /var/log/xrootd
               name: xrootd-log
