FIXME: write out multiuser config (SOFTWARE-5478)
Long term, we want to fix this upstream and lock this config behind an
XC_ENABLE_MULTIUSER env var

--- a/supported/opensciencegrid/osdf-origin/templates/configmap.yaml
+++ b/supported/opensciencegrid/osdf-origin/templates/configmap.yaml
@@ -58,3 +58,16 @@ data:
 {{ .Values.authOrigin.scitokensConfLocal | indent 4 }}
   {{- end }}
 
+  {{ if .Values.multiUser.enabled -}}
+  60-helm-multiuser.cfg: |
+    if named xrootd
+      ofs.osslib ++ libXrdMultiuser.so
+    else
+      ofs.osslib libXrdMultiuser.so default
+    fi
+
+    # Enable the checksum wrapper
+    ofs.ckslib * libXrdMultiuser.so
+
+    xrootd.chksum max 2 md5 adler32 crc32
+  {{- end }}
