Update readme; remove SLATE stuff. We no longer need to restrict the image registry and organization.

--- a/supported/opensciencegrid/osdf-origin/templates/deployment.yaml
+++ b/supported/opensciencegrid/osdf-origin/templates/deployment.yaml
@@ -105,7 +105,7 @@ spec:
 
       containers:
         - name: origin
-          image: "{{ template "osdf-origin.origin-registry" . }}/{{ template "osdf-origin.origin-organization" . }}/stash-origin:{{ .Values.image.tag }}"
+          image: "{{ .Values.image.registry }}/{{ .Values.image.organization }}/stash-origin:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
             - name: XC_RESOURCENAME
