Adding option to ignore replicas
Adding an option to ignore replica due to Nautilus permissions.

--- a/supported/opensciencegrid/osdf-origin/templates/deployment.yaml
+++ b/supported/opensciencegrid/osdf-origin/templates/deployment.yaml
@@ -7,9 +7,11 @@ metadata:
     release: {{ .Release.Name }}
     instance: {{ .Values.Instance | quote }}
 spec:
+  {{- if .Values.replica.enabled }}
   replicas: 1
   strategy:
     type: Recreate
+  {{- end }}
   selector:
     matchLabels:
       app: {{ template "osdf-origin.name" . }}
