Fill out ConfigMap, NetworkPolicy, and Service
Settings taken from looking at osgdev/itb-osdf-pelican-cache on tiger.

Using a ConfigMap for config instead of environment variables because it lets
the user add more complex config than can be expressed with env vars.

--- a/supported/osg-htc/osdf-pelican-cache/templates/configmap.yaml
+++ b/supported/osg-htc/osdf-pelican-cache/templates/configmap.yaml
@@ -1,5 +1,3 @@
-# TODO
-
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -9,67 +7,30 @@ metadata:
     release: {{ .Release.Name }}
     instance: {{ template "osdf-origin.fullname" . }}
 data:
-  # The first public or auth origin export is declared in the environment;
-  # the rest are in a config file.
-  extra_exports.cfg: |
-    {{ if and .Values.publicOrigin.enabled .Values.publicOrigin.exports -}}
-    {{ if rest .Values.publicOrigin.exports -}}
-    if named stash-origin
-    {{- range (rest .Values.publicOrigin.exports) -}}
-      {{- printf "all.export %s" . | nindent 6 -}}
-    {{ end }}
-    fi
-    {{- else -}}
-    # No extra public exports given
+  osdf-cache.yaml: |
+    Federation:
+      DirectorURL: {{ .Values.directorURL }}
+      DiscoveryURL: {{ .Values.discoveryURL }}
+    Server:
+      Hostname: {{ topologyFQDN }}
+      Webport: 443
+      EnableUI: true
+      TLSCertificate: /etc/pelican/cert-orig/tls.crt
+      TLSKey: /etc/pelican/cert-orig/tls.key
+    Logging:
+      Cache:
+        Scitokens: {{ .Values.logging.scitokens }}
+        PSS: {{ .Values.logging.pss }}
+      Level: {{ .Values.logging.loglevel }}
+      LogLocation: /var/log/pelican/pelican.log
+    Shoveler:
+      Enable: false
+    XRootD:
+      SciTokensConfig: /etc/pelican/topology/scitokens.cfg
+    Cache:
+      DataLocation: /cache
+      Port: 8443
+    {{ if .Values.extraConfig }}
+{{ .Values.extraConfig | indent 4 }}
     {{- end }}
-    {{- end }}
-    {{ if and .Values.authOrigin.enabled .Values.authOrigin.exports -}}
-    {{ if rest .Values.authOrigin.exports -}}
-    if named stash-origin-auth
-    {{- range (rest .Values.authOrigin.exports) -}}
-      {{- printf "all.export %s" . | nindent 6 -}}
-    {{ end }}
-    fi
-    {{- else -}}
-    # No extra auth exports given
-    {{- end }}
-    {{- end }}
 
-  {{ if .Values.extraXrootdConfigBefore -}}
-  00-extra-before.cfg: |
-{{ .Values.extraXrootdConfigBefore | indent 4 }}
-  {{- end }}
-
-  {{ if .Values.extraXrootdConfigAfter -}}
-  99-extra-after.cfg: |
-{{ .Values.extraXrootdConfigAfter | indent 4 }}
-  {{- end }}
-
-  {{ if .Values.publicOrigin.authfileLocal -}}
-  stash-origin-Authfile.local: |
-{{ .Values.publicOrigin.authfileLocal | indent 4 }}
-  {{- end }}
-
-  {{ if .Values.authOrigin.authfileLocal -}}
-  stash-origin-auth-Authfile.local: |
-{{ .Values.authOrigin.authfileLocal | indent 4 }}
-  {{- end }}
-
-  {{ if .Values.authOrigin.scitokensConfLocal -}}
-  stash-origin-auth-scitokens.conf.local: |
-{{ .Values.authOrigin.scitokensConfLocal | indent 4 }}
-  {{- end }}
-
-  {{ if .Values.multiUser.enabled -}}
-  60-helm-multiuser.cfg: |
-    if named xrootd
-      ofs.osslib ++ libXrdMultiuser.so
-    else
-      ofs.osslib libXrdMultiuser.so default
-    fi
-
-    # Enable the checksum wrapper
-    ofs.ckslib * libXrdMultiuser.so
-
-    xrootd.chksum max 2 md5 adler32 crc32
-  {{- end }}
