--- a/supported/osg-htc/osdf-pelican-cache/templates/networkpolicy.yaml
+++ b/supported/osg-htc/osdf-pelican-cache/templates/networkpolicy.yaml
@@ -1,10 +1,7 @@
-# TODO
-
----
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: allow-{{ template "osdf-origin.fullname" . }}
+  name: {{ template "osdf-origin.fullname" . }}
 spec:
   podSelector:
     matchLabels:
@@ -16,19 +13,9 @@ spec:
     - Egress
   ingress:
     - ports:
-        # stash-origin
         - protocol: TCP
-          port: 1094
-          # stash-origin-auth
+          port: 8443
         - protocol: TCP
-          port: 1095
-        {{- if .Values.monitoringShoveler.enabled }}
-        - protocol: UDP
-          port: 9993
-        - protocol: TCP
-          port: 9667
-        {{- end}}
-  # egress is needed for downloading CRLs, contacting the OSG Central
-  # Collector, reporting to the OSG redirctor
+          port: 443
   egress:
     - {}
