--- a/supported/osg-htc/osdf-pelican-cache/templates/deployment.yaml
+++ b/supported/osg-htc/osdf-pelican-cache/templates/deployment.yaml
@@ -1,28 +1,28 @@
-# TODO
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ template "osdf-origin.fullname" . }}
+  name: {{ template "osdf-pelican-cache.fullname" . }}
   labels:
-    app: {{ template "osdf-origin.name" . }}
+    app: {{ template "osdf-pelican-cache.name" . }}
+    federation: osdf
+    instance: {{ template "osdf-pelican-cache.fullname" . }}
     release: {{ .Release.Name }}
-    instance: {{ template "osdf-origin.fullname" . }}
 spec:
   replicas: 1
-  strategy:
-    type: Recreate
   selector:
     matchLabels:
-      app: {{ template "osdf-origin.name" . }}
+      app: {{ template "osdf-pelican-cache.name" . }}
       release: {{ .Release.Name }}
-      instance: {{ template "osdf-origin.fullname" . }}
+      instance: {{ template "osdf-pelican-cache.fullname" . }}
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
-        app: {{ template "osdf-origin.name" . }}
+        app: {{ template "osdf-pelican-cache.name" . }}
+        federation: osdf
+        instance: {{ template "osdf-pelican-cache.fullname" . }}
         release: {{ .Release.Name }}
-        instance: {{ template "osdf-origin.fullname" . }}
 
     spec:
       {{- if .Values.nodeName }}
@@ -43,125 +43,77 @@ spec:
       {{- if .Values.hostNetwork }}
       hostNetwork: true
       {{- end }}
+      # securityContext:
+      #   fsGroup: 10940
+      # ^^ XXX do we need this?
+      enableServiceLinks: false
       volumes:
-        {{- if .Values.dataVolumes }}
-        {{- range .Values.dataVolumes }}
-        - name: {{ .name }}
-          {{- if and (not (empty .claimName)) (not (empty .hostPath)) }}
-            {{- fail "Specify claimName or hostPath, not both" -}}
-          {{- else if .claimName }}
+        - name: topology-scitokens.cfg
+          emptyDir: {}
+        - name: webserver-passwd
+          secret:
+            items:
+            - key: webserver-passwd
+              mode: "0644"
+              path: server-web-passwd
+          secretName: {{ .Values.webPasswordSecret }}
+
+        {{- if .Values.cacheVolumeClaimName }}
+        - name: cache-data
           persistentVolumeClaim:
-            claimName: {{ .claimName }}
-          {{- else if .hostPath }}
-          hostPath:
-            path: {{ .hostPath }}
-            type: Directory
-          {{- else if .cephfs }}
-          cephfs:
-            monitors: {{ toJson .cephfs.monitors }}
-            user: {{ .cephfs.user }}
-            secretRef:
-              name: {{ .cephfs.secretRef.name }}
-            {{- if .cephfs.path }}
-            path: {{ .cephfs.path }}
-            {{- end }}
-            {{- if .cephfs.readOnly }}
-            readOnly: {{ .cephfs.readOnly }}
-            {{- end }}
-          {{- else }}
-            {{- fail "Specify claimName, hostPath, or cephfs" -}}
-          {{- end }}
-        {{- end }}
+            claimName: {{ .cacheVolumeClaimName }}
         {{- end }}
 
         {{- if or .Values.certmanager.enabled .Values.hostCertKeySecret }}
         - name: hostcertkey
           secret:
             {{- if .Values.certmanager.enabled }}
-            secretName: {{ template "osdf-origin.fullname" . }}-cert
+            secretName: {{ template "osdf-pelican-cache.fullname" . }}-cert
             {{- else if .Values.hostCertKeySecret }}
             secretName: {{ .Values.hostCertKeySecret }}
             {{- end }}
             items:
             - key: tls.crt
-              path: hostcert.pem
               mode: 0o644
+              path: tls.crt
             - key: tls.key
-              path: hostkey.pem
               mode: 0o400
-        {{- end }}
-
-        {{- if .Values.s3KeysSecret }}
-        - name: s3-keys
-          secret:
-            secretName: {{ .Values.s3KeysSecret }}
-            items:
-            - key: access_key
-              path: access_key
-              mode: 0o644
-            - key: private_key
-              path: private_key
-              mode: 0o400
+              path: tls.key
         {{- end }}
 
         - name: config
           configMap:
-            name: {{ template "osdf-origin.fullname" . }}
+            name: {{ template "osdf-pelican-cache.fullname" . }}
 
-        {{- if .Values.xrootdLogVolumeClaimName }}
-        - name: xrootd-log
+        {{- if .Values.logging.volumeClaimName }}
+        - name: logging-volume
           persistentVolumeClaim:
-            claimName: {{ .Values.xrootdLogVolumeClaimName }}
+            claimName: {{ .Values.logging.volumeClaimName }}
         {{- end }}
 
-        {{- if .Values.sssd.enabled }}
-        - name: sssd-config
-          secret:
-            secretName: {{ .Values.sssd.configSecret }}
-            defaultMode: 384  # octal: 0600 (u=rw, go=)
-        - name: sssd-sockets
-          emptyDir: {}
-        {{ end }}
-
-        {{- if .Values.monitoringShoveler.enabled }}
-        - name: shoveler-secrets
-          secret:
-            secretName: {{ .Values.monitoringShoveler.accessTokenSecret }}
-        {{ end }}
       # end volumes
 
+      initContainers:
+      - args:
+        - -o
+        - scitokens.cfg
+        - --output-dir
+        - /topology
+        - {{ cat "https://topology.opensciencegrid.org/cache/scitokens.conf?fqdn="  .Values.topologyFQDN }}
+        image: curlimages/curl:7.77.0
+        name: topology-scitokens-fetcher
+        volumeMounts:
+        - mountPath: /topology
+          name: topology-scitokens-cfg
+
       containers:
-        - name: origin
-          image: "{{ template "osdf-origin.origin-registry" . }}/{{ template "osdf-origin.origin-organization" . }}/stash-origin:{{ .Values.image.tag }}"
+        - name: pelican-cache
+          image: "{{ .Values.image.registry }}/{{ .Values.image.organization }}/osdf-cache:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          {{- with .Values.extraEnv }}
           env:
-            - name: XC_RESOURCENAME
-              value: "{{ .Values.topologyResourceName }}"
-            - name: ORIGIN_FQDN
-              value: "{{ .Values.topologyFQDN }}"
-            - name: XC_ROOTDIR
-              value: "/xcache/namespace"
-            - name: XRDHOST
-              value: "{{ .Values.topologyFQDN }}"
-            {{- if .Values.multiUser.enabled }}
-            - name: XC_ENABLE_MULTIUSER
-              value: "True"
-            {{ end }}
-            {{- if and .Values.publicOrigin.enabled .Values.publicOrigin.exports }}
-            - name: XC_PUBLIC_ORIGIN_EXPORT
-              value: "{{ first .Values.publicOrigin.exports }}"
-            {{- end }}
-            {{- if and .Values.authOrigin.enabled .Values.authOrigin.exports }}
-            - name: XC_AUTH_ORIGIN_EXPORT
-              value: "{{ first .Values.authOrigin.exports }}"
-            {{- end }}
-            {{- if .Values.monitoringShoveler.enabled }}
-            - name: XC_SHOVELER
-              value: "{{ .Values.topologyFQDN }}:9993"
-            {{- end }}
-            {{- if .Values.extraEnv }}
-              {{- toYaml .Values.extraEnv | nindent 12 }}
-            {{- end }}
+              {{- toYaml . | nindent 12 }}
+          {{- end }}
 
           {{- with .Values.resources }}
           resources:
@@ -170,148 +122,35 @@ spec:
           {{- if .Values.livenessProbeEnabled }}
           livenessProbe:
             tcpSocket:
-              {{- if .Values.authOrigin.enabled }}
-              port: 1095
-              {{- else if .Values.publicOrigin.enabled }}
-              port: 1094
-              {{- end }}
+              port: 8443
             initialDelaySeconds: 600
             periodSeconds: 60
           {{- end }}
           ports:
-            {{- if .Values.authOrigin.enabled }}
-            - containerPort: 1095
-              hostPort: {{ default 1095 .Values.authOrigin.port }}
+            - containerPort: 8443
+              name: pelican
               protocol: TCP
-            {{- end }}
-            {{- if .Values.publicOrigin.enabled }}
-            - containerPort: 1094
-              hostPort: {{ default 1094 .Values.publicOrigin.port }}
+            - containerPort: 443
+              name: pelican-webui
               protocol: TCP
-            {{- end }}
-          {{- if .Values.multiUser.enabled }}
-          securityContext:
-            capabilities:
-              add:
-                - SETUID
-                - SETGID
-                - DAC_OVERRIDE
-          {{ end }}
           volumeMounts:
-            {{- range .Values.dataVolumes }}
-            - mountPath: /xcache/namespace{{ .mountPath }}
-              name: {{ .name }}
-            {{ end }}
+            - mountPath: /etc/pelican/server-web-passwd
+              name: webserver-passwd
+              readOnly: true
+              subPath: server-web-passwd
+            - mountPath: /etc/pelican/topology
+              name: topology-scitokens-cfg
+            - mountPath: /cache
+              name: cache-data
             {{- if or .Values.certmanager.enabled .Values.hostCertKeySecret }}
-            - mountPath: /etc/grid-security/hostcert.pem
-              name: hostcertkey
-              subPath: hostcert.pem
-            - mountPath: /etc/grid-security/hostkey.pem
-              name: hostcertkey
-              subPath: hostkey.pem
+            - mountPath: /etc/pelican/cert-orig
+              name: pelican-cache-ssl-cert
             {{ end }}
-            {{- if .Values.s3KeysSecret }}
-            - mountPath: /s3-secrets
-              name: s3-keys
-            {{ end }}
-            - mountPath: /etc/xrootd/config.d/extra_exports.cfg
-              name: config
-              subPath: extra_exports.cfg
-            {{- if and .Values.publicOrigin.enabled .Values.publicOrigin.authfileLocal }}
-            - mountPath: /run/stash-origin/Authfile.local
-              name: config
-              subPath: stash-origin-Authfile.local
-            {{ end }}
-            {{- if and .Values.authOrigin.enabled .Values.authOrigin.authfileLocal }}
-            - mountPath: /run/stash-origin-auth/Authfile.local
-              name: config
-              subPath: stash-origin-auth-Authfile.local
-            {{ end }}
-            {{- if and .Values.authOrigin.enabled .Values.authOrigin.scitokensConfLocal }}
-            - mountPath: /run/stash-origin-auth/scitokens.conf.local
-              name: config
-              subPath: stash-origin-auth-scitokens.conf.local
-            {{ end }}
-            {{- if .Values.extraXrootdConfigBefore }}
-            - mountPath: /etc/xrootd/config.d/00-extra-before.cfg
-              name: config
-              subPath: 00-extra-before.cfg
-            {{ end }}
-            {{- if .Values.extraXrootdConfigAfter }}
-            - mountPath: /etc/xrootd/config.d/99-extra-after.cfg
-              name: config
-              subPath: 99-extra-after.cfg
-            {{ end }}
-            {{- if .Values.multiUser.enabled }}
-            - mountPath: /etc/xrootd/config.d/60-helm-multiuser.cfg
-              name: config
-              subPath: 60-helm-multiuser.cfg
-            {{ end }}
-            {{- if .Values.xrootdLogVolumeClaimName }}
-            - mountPath: /var/log/xrootd
-              name: xrootd-log
-            {{ end }}
-            {{- if .Values.sssd.enabled }}
-            - name: sssd-sockets
-              mountPath: /var/lib/sss/pipes
+            {{- if .Values.logging.volumeClaimName }}
+            - mountPath: /var/log/pelican
+              name: logging-volume
             {{ end }}
           # end volumeMounts
-        {{- if .Values.sssd.enabled }}
-        - name: sssd
-          image: hub.opensciencegrid.org/opensciencegrid/sssd:3.6-release
-          imagePullPolicy: Always
-          resources:
-            requests:
-              cpu: "0.2"
-              memory: "128Mi"
-            limits:
-              cpu: "1"
-              memory: "1Gi"
-          volumeMounts:
-            - name: sssd-config
-              mountPath: /etc/sssd/sssd.conf
-              subPath: sssd.conf
-            - name: sssd-sockets
-              mountPath: /var/lib/sss/pipes
-        {{ end }}
-
-        {{- if .Values.monitoringShoveler.enabled }}
-        - name: xrootd-stash-shoveler
-          image: hub.opensciencegrid.org/opensciencegrid/xrootd-monitoring-shoveler:latest
-          env:
-            - name: SHOVELER_AMQP_TOKEN_LOCATION
-              value: /secrets/token
-            - name: SHOVELER_AMQP_URL
-              value: {{ .Values.monitoringShoveler.amqpUrl }}
-            - name: SHOVELER_AMQP_EXCHANGE
-              value: {{ .Values.monitoringShoveler.amqpExchange }}
-            - name: SHOVELER_LISTEN_PORT
-              value: "9993"
-            - name: SHOVELER_METRICS_PORT
-              value: "9667"
-            - name: SHOVELER_LISTEN_IP
-              value: "0.0.0.0"
-            {{- if .Values.monitoringShoveler.extraEnv }}
-              {{- toYaml .Values.monitoringShoveler.extraEnv | nindent 12 }}
-            {{- end }}
-              
-          resources:
-            limits:
-              memory: "2Gi"
-              cpu: "500m"
-          imagePullPolicy: Always
-          ports:
-            - name: shoveler
-              containerPort: 9993
-              protocol: UDP
-            - name: stats
-              containerPort: 9667
-              protocol: TCP
-          volumeMounts:
-            - name: shoveler-secrets
-              mountPath: /secrets
-              readOnly: true
-        {{ end }}
       # end containers
     # end spec
   # end template
